# myntra_pricing_analysis

./: .gitignore  README.md  pyproject.toml
analysis/: eda_initial.ipynb  myntra_analysis.ipynb
data/: day_01.csv  day_02.csv  day_03.csv  day_04.csv  day_05.csv  day_06.csv  day_07.csv  day_08.csv  day_09.csv  day_10.csv  day_11.csv  day_12.csv  day_13.csv  day_14.csv  day_15.csv  day_16.csv  day_17.csv  day_19.csv  day_20.csv
data/raw/: day_18.csv
scraping/: scrape_product_listings.ipynb
